--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="WEB-PORTFOLIO-HTML-CSS-JS/Ricardo Patiño Foto.jpeg" alt="Profile Picture">
+                <img src="Ricardo Patiño Foto.jpeg" alt="Profile Picture">
             </div>
             <h1>Ricardo Patiño</h1>
             <h2> Ingeniero de Software - FullStack</h2>
@@ -169,7 +169,7 @@
                 </table>
             </br></br>
             <button>
-              <a href="WEB-PORTFOLIO-HTML-CSS-JS/ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar <i class="fa-solid fa-download"></i>
+              <a href="ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </button>
         </div>
@@ -462,7 +462,7 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="WEB-PORTFOLIO-HTML-CSS-JS/ubicacion.png" alt="Mapa">
+                    <img src="https://github.com/Ricardo-Patino/WEB-PORTFOLIO-HTML-CSS-JS/blob/218743f689d815067a00dd5a3a9d59f9d84a0063/WEB-PORTFOLIO-HTML-CSS-JS/ubicacion.png" alt="Mapa">
                     <div class="info">
                         <ul>
                             <li>
