--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </table>
             </br></br>
             <button>
-              <a href="ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar <i class="fa-solid fa-download"></i>
+              <a href="ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar Currículo<i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </button>
         </div>
