--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Ricardo Patiño - Portfolio</title>
+    <title>Portafolio - Ricardo Patiño</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -169,7 +169,7 @@
                 </table>
             </br></br>
             <button>
-              <a href="ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar Currículo<i class="fa-solid fa-download"></i>
+              <a href="ResumeRicardoPatiño2023.pdf" download="ResumeRicardoPatiño2023" target="_blank"Currículo > Descargar Currículo <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </button>
         </div>
