--- a/index.html
+++ b/index.html
@@ -420,13 +420,13 @@
             </style>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="WEB-PORTFOLIO-HTML-CSS-JS/Logo.jpg" alt="Web del Hotel">
+                    <img src="Logo.jpg" alt="Web del Hotel">
                     <div class="overlay">
                         <a href="https://rickpatinor.wixsite.com/hotelvillagrace"><h3>Hotel Villa Grace</h3><p>Página Web</p></a>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="WEB-PORTFOLIO-HTML-CSS-JS/github-logo.jpeg" alt="Proyects/Portfolio">
+                    <img src="github-logo.jpeg" alt="Proyects/Portfolio">
                     <div class="overlay">
                         <a href="https://github.com/Ricardo-Patino?tab=repositories"><h3>GIT HUB</h3><p>PROYECTOS</p></a> 
                         
@@ -434,7 +434,7 @@
                 </div>
 
                 <div class="proyecto">
-                    <img src="WEB-PORTFOLIO-HTML-CSS-JS/OvercookFIDE.png" alt="Java Game">
+                    <img src="OvercookFIDE.png" alt="Java Game">
                     <div class="overlay">
                         <a href=" https://github.com/Ricardo-Patino/OverCooked-Fide.git"><h3>OVERCOOKED</h3><p>JUEGO INTERCATIVO EN JAVA</p></a>
                     </div>
@@ -462,7 +462,7 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="https://github.com/Ricardo-Patino/WEB-PORTFOLIO-HTML-CSS-JS/blob/218743f689d815067a00dd5a3a9d59f9d84a0063/WEB-PORTFOLIO-HTML-CSS-JS/ubicacion.png" alt="Mapa">
+                    <img src="ubicacion.png" alt="Mapa">
                     <div class="info">
                         <ul>
                             <li>
