--- a/index.html
+++ b/index.html
@@ -439,6 +439,12 @@
                         <a href=" https://github.com/Ricardo-Patino/OverCooked-Fide.git"><h3>OVERCOOKED</h3><p>JUEGO INTERCATIVO EN JAVA</p></a>
                     </div>
                 </div>
+                <div class="proyecto">
+                    <img src="https://mir-s3-cdn-cf.behance.net/projects/808/94e4a495912955.Y3JvcCwxNjg0LDEzMTcsMCww.png" alt="Portafolio">
+                    <div class="overlay">
+                        <a href="https://rickpatinor-youtube.netlify.app/"><h3>Portafolio</h3><p>Portafolio de Videos</p></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
