--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 <div class="proyecto">
                     <img src="https://mir-s3-cdn-cf.behance.net/projects/808/94e4a495912955.Y3JvcCwxNjg0LDEzMTcsMCww.png" alt="Portafolio">
                     <div class="overlay">
-                        <a href="rickpatinor-youtube-espanol.netlify.app"><h3>Portafolio</h3><p>Portafolio de Videos</p></a>
+                        <a href="https://rickpatinor-youtube-espanol.netlify.app"><h3>Portafolio</h3><p>Portafolio de Videos</p></a>
                     </div>
                 </div>
             </div>
