--- a/index.html
+++ b/index.html
@@ -404,10 +404,10 @@
         </div>
     </section>
 
-    <!-- SECCION PORTFOLIO -->
+    <!-- SECCION PORTAFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
+            <h2>PORTAFOLIO</h2>
             <style>
                 img{
                     max-width: 100%;
