--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                     <div class="info">
                         <ul>
                             <li>
-                                <i class="fa-solid fa-location-dot"></i><h3>Heredia, Costa Rica.</h3>Click and select a tool.
+                                <i class="fa-solid fa-location-dot"></i><h3>Heredia, Costa Rica.</h3>Haga Click y elija una opción.
                                 <div class="showtheway">Heredia, Costa Rica<a href="https://showtheway.io/to/10.006607,-84.11201" target="_blank" title="Show the Way to 10.006607,-84.11201 with your favorite navigation application"></a></div><script src="https://showtheway.io/w.js" async="async" type="text/javascript"></script>
                             </li>
                             <li>
