--- a/index.html
+++ b/index.html
@@ -459,21 +459,20 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <form action="https://formsubmit.co/rickpatinor@gmail.com" method="POST"></form>
-                    <form action="https://formsubmit.co/el/jojule" method="POST"></form>
-                    <input type="hidden" name="_subject" value="Nuevo Correo!">
-                    <input type="name" placeholder="Name / Nombre" required>
-                    <input type="text" placeholder="Phone / Teléfono">
-                    <input type="email" name="email" placeholder=" Email / Correo" required>
-                    <input type="text" placeholder="Concern / Tema" required>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
-                    <input type="file" name="attachment" accept="image/png, image/jpeg">
-                    <button onclick="alert('Email sent! / Correo Enviado!');">
-                        Sent / Enviar <i class="fa-solid fa-paper-plane"></i>
-                        <span class="overlay"></span>
-                    </button>
-                    
-                </form>
+                    <form action="https://formsubmit.co/el/jojule" method="POST"><!-- /jojule can be removed and replaced with the email address where forms whated to get -->
+                        <input type="hidden" name="_subject" value="Nuevo Correo!">
+                        <input type="name" placeholder="Name / Nombre" required>
+                        <input type="text" placeholder="Phone / Teléfono">
+                        <input type="email" name="email" placeholder=" Email / Correo" required>
+                        <input type="text" placeholder="Concern / Tema" required>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
+                        <input type="file" name="attachment" accept="image/png, image/jpeg">
+                        <button onclick="alert('Email sent!');">
+                            Send <i class="fa-solid fa-paper-plane"></i>
+                            <span class="overlay"></span>
+                        </button>
+                        
+                    </form>
 
                 </div>
                 <!-- Mapa -->
