--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <form action="https://formsubmit.co/el/jojule" method="POST"><!-- /jojule can be removed and replaced with the email address where forms whated to get -->
+                    <form action="https://formsubmit.co/el/jojule" method="POST"><!-- el/jojule can be removed and replaced with the email address where forms wanted to get -->
                         <input type="hidden" name="_subject" value="Nuevo Correo!">
                         <input type="name" placeholder="Name / Nombre" required>
                         <input type="text" placeholder="Phone / Teléfono">
@@ -468,7 +468,7 @@
                         <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
                         <input type="file" name="attachment" accept="image/png, image/jpeg">
                         <button onclick="alert('Email sent!');">
-                            Send <i class="fa-solid fa-paper-plane"></i>
+                            Enviar <i class="fa-solid fa-paper-plane"></i>
                             <span class="overlay"></span>
                         </button>
                         
