--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
             <h2>CONTACTO</h2>
             <div class="fila">
                 <!-- Formulario -->
-                <div class="col">
-                    <form action="https://formsubmit.co/el/jojule" method="POST"><!-- el/jojule can be removed and replaced with the email address where forms wanted to get -->
+               <div class="col">
+                     <form action="https://formsubmit.co/rickpatinor@gmail.com" method="POST"><!-- /el/jojule can be sawapt and replaced with the email address where forms whated to get -->
                         <input type="hidden" name="_subject" value="Nuevo Correo!">
                         <input type="name" placeholder="Name / Nombre" required>
                         <input type="text" placeholder="Phone / Teléfono">
