--- a/index.html
+++ b/index.html
@@ -458,21 +458,22 @@
             <h2>CONTACTO</h2>
             <div class="fila">
                 <!-- Formulario -->
-               <div class="col">
-                     <form action="https://formsubmit.co/rickpatinor@gmail.com" method="POST"><!-- /el/jojule can be sawapt and replaced with the email address where forms whated to get -->
-                        <input type="hidden" name="_subject" value="Nuevo Correo!">
-                        <input type="name" placeholder="Name / Nombre" required>
-                        <input type="text" placeholder="Phone / Teléfono">
-                        <input type="email" name="email" placeholder=" Email / Correo" required>
-                        <input type="text" placeholder="Concern / Tema" required>
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
-                        <input type="file" name="attachment" accept="image/png, image/jpeg">
-                        <button onclick="alert('Email sent!');">
-                            Enviar <i class="fa-solid fa-paper-plane"></i>
-                            <span class="overlay"></span>
-                        </button>
-                        
-                    </form>
+              <div class="col">
+                <form action="https://formsubmit.co/el/jojule" method="POST"> <!-- el/jojule se puede remover y poner el correo donde quiera que lleguen las respuestas -->
+                    <input type="hidden" name="_subject" value="Nuevo Correo!">
+                    <input type="text" placeholder="Name / Nombre" required>
+                    <input type="text" placeholder="Phone / Teléfono">
+                    <input type="email" name="email" placeholder=" Email / Correo" required>
+                    <input type="text" placeholder="Concern / Tema" required>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
+                    <input type="file" name="attachment" accept="image/png, image/jpeg">
+                    <input type="hidden" name="_next" value="https://portfolio-ricardopatino.netlify.app/thanks.html">
+                    <button onclick="alert('Email sent! I will get back to to as soon as possible!');">
+                        Enviar <i class="fa-solid fa-paper-plane"></i>
+                        <span class="overlay"></span>
+                    </button>
+                    
+                </form>
 
                 </div>
                 <!-- Mapa -->
