--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                     <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje"></textarea>
                     <input type="file" name="attachment" accept="image/png, image/jpeg">
                     <input type="hidden" name="_next" value="https://portfolio-ricardopatino.netlify.app/thanks.html">
-                    <button onclick="alert('Email sent! I will get back to to as soon as possible!');">
+                    <button onclick="alert('Correo enviado! Le responderé lo antes posible!');">
                         Enviar <i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
