--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <input type="text" placeholder="Phone / Teléfono">
                     <input type="email" name="email" placeholder=" Email / Correo" required>
                     <input type="text" placeholder="Concern / Tema" required>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje" required></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message / Mensaje" ></textarea>
                     <input type="file" name="attachment" accept="image/png, image/jpeg">
                     <button onclick="alert('Correo enviado! Le responderé lo antes posible!');">
                         Enviar <i class="fa-solid fa-paper-plane"></i>
