--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
                         <span class="fecha">2018 - 2021</span>
                         <p></br>
                             <ul>
-                                <li>Con un excelente servicio al cliente, brindsr soporte técnico e información sobre el producto.</li>
+                                <li>Con un excelente servicio al cliente, brindar soporte técnico e información sobre el producto.</li>
                                 <li>Abrir casos de soporte y escalarlos según sea necesario a ingenieros/arquitectos de nivel 2 o superiores.</li>
                                 <li>Configurar perfiles de acceso a la red.</li>
                                 <li>Configuración de red, software y productos para garantizar que los dispositivos y productos de la empresa funcionen en el entorno de Internet/wifi del Cliente.</li>
                                 <li>Análisis de red e inalámbrico para mejorar el rendimiento de los dispositivos en sistemas Wifi.</li>
                                 <li>Solución de problemas y configuración de redes domésticas, configuración del enrutador y seguridad de Internet.</li>
-                                <li>Con un excelente servicio al cliente, brindamr soporte e información sobre el producto.</li>
+                                <li>Con un excelente servicio al cliente, brindar soporte e información sobre el producto.</li>
                                <li>Soporte telefónico y por correo electrónico para productos CISCO.</li>
                                <li>Ayudar a los compañeros de trabajo a aclarar dudas y guiarlos sobre el proceso interno correcto y ayudarlos a brindar soporte a los usuarios finales/escalaciones.</li>
                                <li>Analizar los problemas de red, software y hardware para llegar a la causa del problema de red y solucionarlo.</li>
@@ -447,7 +447,7 @@
                     </div>
                 </div>
 
-                                <div class="proyecto">
+                 <div class="proyecto">
                     <img src="https://wallpaperaccess.com/full/1205484.jpg" alt="Portafolio">
                     <div class="overlay">
                         <a href="https://tetris-by-ricardopatino.netlify.app/"><h3>Tetris</h3><p>Por Ricardo Patino</p></a>
