--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                  <div class="proyecto">
                     <img src="https://wallpaperaccess.com/full/1205484.jpg" alt="Portafolio">
                     <div class="overlay">
-                        <a href="https://tetris-by-ricardopatino.netlify.app/"><h3>Tetris</h3><p>Por Ricardo Patino</p></a>
+                        <a href="https://tetris-by-ricardopatino.netlify.app/"><h3>Tetris</h3><p>Por Ricardo Patiño</p></a>
                     </div>
                 </div>
 
