--- a/index.html
+++ b/index.html
@@ -340,6 +340,28 @@
                 <div class="col derecha">
                     <h3>EXPERIENCIA DE TRABAJO</h3>
                     <div class="item der">
+                        <h4>Presales Engineer - Software & CISCO</h4>
+                        <span class="casa">OCP TECH</span>
+                        <span class="fecha">2024 - Present</span>
+                        <p></br>
+                            <ul>
+                                <li>Diseñar e implementar soluciones de software para análisis de datos, transformación digital, reconocimiento facial, IA y necesidades de CISCO, que cumplan con los requisitos del cliente de acuerdo con el portafolio de productos y servicios de OCP TECH. Brindar soporte técnico al equipo de ventas.</li>
+                                <li>Responsabilidades clave:</li>
+                                <li>Ayudar a los clientes a tomar decisiones informadas de adquisición de tecnología en función de sus necesidades específicas.</li>
+                                <li>Realizar presentaciones sobre tecnologías con una traducción sencilla de su aplicación a las áreas comerciales.</li>
+                                <li>Adoptar un enfoque consultivo para comprender las necesidades del cliente, presentando propuestas de valor personalizadas y casos de uso para abordar los puntos críticos.</li>
+                                <li>Desarrollar propuestas técnicas para los clientes, colaborando con el equipo comercial para alinearse con los requisitos del cliente.</li>
+                                <li>Trabajar en estrecha colaboración con el equipo de ventas para diseñar y presentar productos técnicos o soluciones de TI a los clientes.</li>
+                                <li>Documentar, presentra y explicar productos, servicios o soluciones de TI para traducir de manera efectiva las ventajas tecnológicas en "lenguaje comercial".</li>
+                                <li>Preparar demostraciones y presentaciones sobre productos o soluciones.</li>
+                                <li>Supervisar la implementación de las soluciones propuestas, detallando el diseño final de la solución de TI.</li>
+                                <li>Evaluar productos propios y de la competencia a escala tecnológica para ofrecer las mejores soluciones a los clientes.</li>
+                                </ul></p>
+                        <div class="conectord">
+                            <div class="circulod"></div>
+                        </div>
+                    </div>
+                    <div class="item der">
                         <h4>Technical Producer - Technical Services/Campaign Solutions</h4>
                         <span class="casa">Meet Marigold</span>
                         <span class="fecha">2022 - 2023</span>
