--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@
                         <p></br>
                             <ul>
                                 <li>Diseñar e implementar soluciones de software para análisis de datos, transformación digital, reconocimiento facial, IA y necesidades de CISCO, que cumplan con los requisitos del cliente de acuerdo con el portafolio de productos y servicios de OCP TECH. Brindar soporte técnico al equipo de ventas.</li>
-                                <li>Responsabilidades clave:</li>
+                                 </br>
+                                <p>Responsabilidades clave:</p>
+                                </br>
                                 <li>Ayudar a los clientes a tomar decisiones informadas de adquisición de tecnología en función de sus necesidades específicas.</li>
                                 <li>Realizar presentaciones sobre tecnologías con una traducción sencilla de su aplicación a las áreas comerciales.</li>
                                 <li>Adoptar un enfoque consultivo para comprender las necesidades del cliente, presentando propuestas de valor personalizadas y casos de uso para abordar los puntos críticos.</li>
