--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>Web Content Manager - FullStack Web Developer</span>
+                            <span>CISCO Presales Software Engineer  - FullStack Web Developer</span>
                         </li>
                     </ul>
                 </div>
